finally, text spacing fixed

--- a/src/m_play/gnovel/static/gnovel/res/css/style.css
+++ b/src/m_play/gnovel/static/gnovel/res/css/style.css
@@ -1,6 +1,8 @@
-#application-canvas {
-	display: block;
-	margin: auto;
+@media screen {
+	#application-canvas.fill-mode-KEEP_ASPECT {
+		display: block;
+		margin: auto;
+	}
 }
 @font-face{
 	font-family: 'Arvo', serif;
